fixed paths for new domain

--- a/legal/license.html
+++ b/legal/license.html
@@ -39,7 +39,7 @@
     <meta property="og:title" content="DART Project - Project License">
     <meta property="og:description" content="TEXT">
     <meta property="og:image" content="../images/social-share/The-DART-Project.png">
-    <meta property="og:url" content="https://thatsinewave.github.io/CDA-Project/pages/license.html">
+    <meta property="og:url" content="https://thedartproject.github.io/pages/license.html">
     <meta property="og:type" content="website">
     <!-- Twitter Card Meta Tags (for better sharing on Twitter) -->
     <meta name="twitter:card" content="summary_large_image">
@@ -62,52 +62,52 @@
         <h3 class="text-xs font-semibold text-indigo-200 uppercase px-4 pt-4 pb-2">Main</h3>
         <ul class="mb-4">
           <li>
-            <a href="/CDA-Project/index.html" class="sidebar-link hover:bg-indigo-600">Home</a>
+            <a href="../index.html" class="sidebar-link hover:bg-indigo-600">Home</a>
           </li>
           <li>
-            <a href="/CDA-Project/pages/database.html" class="sidebar-link hover:bg-indigo-600">Database</a>
+            <a href="../pages/database.html" class="sidebar-link hover:bg-indigo-600">Database</a>
           </li>
         </ul>
         <!-- Monitoring -->
         <h3 class="text-xs font-semibold text-indigo-200 uppercase px-4 pt-4 pb-2">Monitoring</h3>
         <ul class="mb-4">
           <li>
-            <a href="/CDA-Project/pages/dashboard.html" class="sidebar-link hover:bg-indigo-600">Dashboard</a>
+            <a href="../pages/dashboard.html" class="sidebar-link hover:bg-indigo-600">Dashboard</a>
           </li>
           <li>
-            <a href="/CDA-Project/pages/threat-map.html" class="sidebar-link hover:bg-indigo-600">Threat Map</a>
+            <a href="../pages/threat-map.html" class="sidebar-link hover:bg-indigo-600">Threat Map</a>
           </li>
           <li>
-            <a href="/CDA-Project/pages/intelligence.html" class="sidebar-link hover:bg-indigo-600">Intel Reports</a>
+            <a href="../pages/intelligence.html" class="sidebar-link hover:bg-indigo-600">Intel Reports</a>
           </li>
           <li>
-            <a href="/CDA-Project/pages/cda-monitor-app.html" class="sidebar-link hover:bg-indigo-600">Discord App</a>
+            <a href="../pages/monitor-app.html" class="sidebar-link hover:bg-indigo-600">Discord App</a>
           </li>
         </ul>
         <!-- Resources -->
         <h3 class="text-xs font-semibold text-indigo-200 uppercase px-4 pt-4 pb-2">Resources</h3>
         <ul class="mb-4">
           <li>
-            <a href="/CDA-Project/pages/info.html" class="sidebar-link hover:bg-indigo-600">Info Center</a>
+            <a href="../pages/info.html" class="sidebar-link hover:bg-indigo-600">Info Center</a>
           </li>
           <li>
-            <a href="/CDA-Project/pages/resources.html" class="sidebar-link hover:bg-indigo-600">Resource Center</a>
+            <a href="../pages/resources.html" class="sidebar-link hover:bg-indigo-600">Resource Center</a>
           </li>
           <li>
-            <a href="/CDA-Project/pages/faq.html" class="sidebar-link hover:bg-indigo-600">Frequent Questions</a>
+            <a href="../pages/faq.html" class="sidebar-link hover:bg-indigo-600">Frequent Questions</a>
           </li>
           <li>
-            <a href="/CDA-Project/pages/news.html" class="sidebar-link hover:bg-indigo-600">Latest News</a>
+            <a href="../pages/news.html" class="sidebar-link hover:bg-indigo-600">Latest News</a>
           </li>
           <li>
-            <a href="/CDA-Project/pages/changelog.html" class="sidebar-link hover:bg-indigo-600">Changelog</a>
+            <a href="../pages/changelog.html" class="sidebar-link hover:bg-indigo-600">Changelog</a>
           </li>
         </ul>
         <!-- Planning -->
         <h3 class="text-xs font-semibold text-indigo-200 uppercase px-4 pt-4 pb-2">Planning</h3>
         <ul class="mb-4">
           <li>
-            <a href="/CDA-Project/pages/roadmap.html" class="sidebar-link hover:bg-indigo-600">Project Roadmap</a>
+            <a href="../pages/roadmap.html" class="sidebar-link hover:bg-indigo-600">Project Roadmap</a>
           </li>
         </ul>
       </nav>
@@ -321,13 +321,13 @@
         <!-- Buttons -->
         <div class="flex flex-wrap justify-center gap-4">
           <!-- License Button -->
-          <a href="/CDA-Project/pages/license.html" class="bg-indigo-700 hover:bg-indigo-600 text-white px-6 py-3 rounded-lg text-lg font-semibold transition-colors shadow-md hover:shadow-lg w-full sm:w-auto"> LICENSE </a>
+          <a href="license.html" class="bg-indigo-700 hover:bg-indigo-600 text-white px-6 py-3 rounded-lg text-lg font-semibold transition-colors shadow-md hover:shadow-lg w-full sm:w-auto"> LICENSE </a>
           <!-- Code of Conduct Button -->
-          <a href="/CDA-Project/pages/code-of-conduct.html" class="bg-indigo-700 hover:bg-indigo-600 text-white px-6 py-3 rounded-lg text-lg font-semibold transition-colors shadow-md hover:shadow-lg w-full sm:w-auto"> CODE OF CONDUCT </a>
+          <a href="code-of-conduct.html" class="bg-indigo-700 hover:bg-indigo-600 text-white px-6 py-3 rounded-lg text-lg font-semibold transition-colors shadow-md hover:shadow-lg w-full sm:w-auto"> CODE OF CONDUCT </a>
           <!-- Contributing Button -->
-          <a href="/CDA-Project/pages/contributing.html" class="bg-indigo-700 hover:bg-indigo-600 text-white px-6 py-3 rounded-lg text-lg font-semibold transition-colors shadow-md hover:shadow-lg w-full sm:w-auto"> CONTRIBUTIONS </a>
+          <a href="contributing.html" class="bg-indigo-700 hover:bg-indigo-600 text-white px-6 py-3 rounded-lg text-lg font-semibold transition-colors shadow-md hover:shadow-lg w-full sm:w-auto"> CONTRIBUTIONS </a>
           <!-- Security Button -->
-          <a href="/CDA-Project/pages/security.html" class="bg-indigo-700 hover:bg-indigo-600 text-white px-6 py-3 rounded-lg text-lg font-semibold transition-colors shadow-md hover:shadow-lg w-full sm:w-auto"> SECURITY </a>
+          <a href="security.html" class="bg-indigo-700 hover:bg-indigo-600 text-white px-6 py-3 rounded-lg text-lg font-semibold transition-colors shadow-md hover:shadow-lg w-full sm:w-auto"> SECURITY </a>
         </div>
       </div>
     </div>
