--- a/404.html
+++ b/404.html
@@ -10,7 +10,7 @@
     <!-- Main stylesheets -->
     <link rel="stylesheet" href="assets/css/main.css">
     <link rel="stylesheet" href="assets/css/tailwind.min.css">
-    <link rel="stylesheet" href="../assets/css/context-menu.css">
+    <link rel="stylesheet" href="assets/css/context-menu.css">
     <!-- Favicon for all browsers -->
     <link rel="icon" href="images/favicons/favicon.ico" type="image/x-icon">
     <!-- Apple Touch Icons (for iOS home screen bookmarks) -->
@@ -39,7 +39,7 @@
     <meta property="og:title" content="DART Project - 404">
     <meta property="og:description" content="Oops! The page you're looking for doesn't exist.">
     <meta property="og:image" content="images/social-share/The-DART-Project.png">
-    <meta property="og:url" content="https://thatsinewave.github.io/CDA-Project/404.html">
+    <meta property="og:url" content="https://thedartproject.github.io//404.html">
     <meta property="og:type" content="website">
     <!-- Twitter Card Meta Tags (for better sharing on Twitter) -->
     <meta name="twitter:card" content="summary_large_image">
@@ -64,52 +64,52 @@
         <h3 class="text-xs font-semibold text-indigo-200 uppercase px-4 pt-4 pb-2">Main</h3>
         <ul class="mb-4">
           <li>
-            <a href="/CDA-Project/index.html" class="sidebar-link hover:bg-indigo-600">Home</a>
+            <a href="index.html" class="sidebar-link hover:bg-indigo-600">Home</a>
           </li>
           <li>
-            <a href="/CDA-Project/pages/database.html" class="sidebar-link hover:bg-indigo-600">Database</a>
+            <a href="pages/database.html" class="sidebar-link hover:bg-indigo-600">Database</a>
           </li>
         </ul>
         <!-- Monitoring -->
         <h3 class="text-xs font-semibold text-indigo-200 uppercase px-4 pt-4 pb-2">Monitoring</h3>
         <ul class="mb-4">
           <li>
-            <a href="/CDA-Project/pages/dashboard.html" class="sidebar-link hover:bg-indigo-600">Dashboard</a>
+            <a href="pages/dashboard.html" class="sidebar-link hover:bg-indigo-600">Dashboard</a>
           </li>
           <li>
-            <a href="/CDA-Project/pages/threat-map.html" class="sidebar-link hover:bg-indigo-600">Threat Map</a>
+            <a href="pages/threat-map.html" class="sidebar-link hover:bg-indigo-600">Threat Map</a>
           </li>
           <li>
-            <a href="/CDA-Project/pages/intelligence.html" class="sidebar-link hover:bg-indigo-600">Intel Reports</a>
+            <a href="pages/intelligence.html" class="sidebar-link hover:bg-indigo-600">Intel Reports</a>
           </li>
           <li>
-            <a href="/CDA-Project/pages/cda-monitor-app.html" class="sidebar-link hover:bg-indigo-600">Discord App</a>
+            <a href="pages/cda-monitor-app.html" class="sidebar-link hover:bg-indigo-600">Discord App</a>
           </li>
         </ul>
         <!-- Resources -->
         <h3 class="text-xs font-semibold text-indigo-200 uppercase px-4 pt-4 pb-2">Resources</h3>
         <ul class="mb-4">
           <li>
-            <a href="/CDA-Project/pages/info.html" class="sidebar-link hover:bg-indigo-600">Info Center</a>
+            <a href="pages/info.html" class="sidebar-link hover:bg-indigo-600">Info Center</a>
           </li>
           <li>
-            <a href="/CDA-Project/pages/resources.html" class="sidebar-link hover:bg-indigo-600">Resource Center</a>
+            <a href="pages/resources.html" class="sidebar-link hover:bg-indigo-600">Resource Center</a>
           </li>
           <li>
-            <a href="/CDA-Project/pages/faq.html" class="sidebar-link hover:bg-indigo-600">Frequent Questions</a>
+            <a href="pages/faq.html" class="sidebar-link hover:bg-indigo-600">Frequent Questions</a>
           </li>
           <li>
-            <a href="/CDA-Project/pages/news.html" class="sidebar-link hover:bg-indigo-600">Latest News</a>
+            <a href="pages/news.html" class="sidebar-link hover:bg-indigo-600">Latest News</a>
           </li>
           <li>
-            <a href="/CDA-Project/pages/changelog.html" class="sidebar-link hover:bg-indigo-600">Changelog</a>
+            <a href="pages/changelog.html" class="sidebar-link hover:bg-indigo-600">Changelog</a>
           </li>
         </ul>
         <!-- Planning -->
         <h3 class="text-xs font-semibold text-indigo-200 uppercase px-4 pt-4 pb-2">Planning</h3>
         <ul class="mb-4">
           <li>
-            <a href="/CDA-Project/pages/roadmap.html" class="sidebar-link hover:bg-indigo-600">Project Roadmap</a>
+            <a href="pages/roadmap.html" class="sidebar-link hover:bg-indigo-600">Project Roadmap</a>
           </li>
         </ul>
       </nav>
@@ -126,7 +126,7 @@
         <div class="container mx-auto flex justify-between items-center">
           <!-- Header Title -->
           <div>
-            <a href="/CDA-Project/index.html" class="block">
+            <a href="index.html" class="block">
               <h1 class="text-2xl font-bold flex items-center"> DART Project <span class="text-amber-400 text-xs ml-2 align-top">BETA</span>
               </h1>
               <p class="text-sm text-gray-200">Tracking Threats, Protecting Communities</p>
@@ -163,7 +163,7 @@
         <h1 class="text-6xl font-bold text-indigo-500 mb-4">404</h1>
         <p class="text-xl text-gray-700 mb-8">Oops! The page you're looking for doesn't exist.</p>
         <!-- Back to Home Button -->
-        <a href="/CDA-Project/index.html" class="bg-indigo-600 hover:bg-indigo-500 text-white px-8 py-4 rounded-lg text-lg font-semibold transition-colors shadow-lg hover:shadow-xl">Go Back Home</a>
+        <a href="index.html" class="bg-indigo-600 hover:bg-indigo-500 text-white px-8 py-4 rounded-lg text-lg font-semibold transition-colors shadow-lg hover:shadow-xl">Go Back Home</a>
       </div>
     </div>
     <!-- Footer -->
