--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <meta property="og:title" content="DART Project - Home">
     <meta property="og:description" content="A comprehensive security dashboard designed to track and analyze malicious activities across Discord servers. The DART Project provides threat monitoring, advanced analytics to help server owners detect and prevent cyber threats effectively.">
     <meta property="og:image" content="images/social-share/The-DART-Project.png">
-    <meta property="og:url" content="https://thatsinewave.github.io/CDA-Project/index.html">
+    <meta property="og:url" content="https://thedartproject.github.io/">
     <meta property="og:type" content="website">
     <!-- Twitter Card Meta Tags (for better sharing on Twitter) -->
     <meta name="twitter:card" content="summary_large_image">
@@ -65,52 +65,52 @@
         <h3 class="text-xs font-semibold text-indigo-200 uppercase px-4 pt-4 pb-2">Main</h3>
         <ul class="mb-4">
           <li>
-            <a href="/CDA-Project/index.html" class="sidebar-link hover:bg-indigo-600">Home</a>
+            <a href="index.html" class="sidebar-link hover:bg-indigo-600">Home</a>
           </li>
           <li>
-            <a href="/CDA-Project/pages/database.html" class="sidebar-link hover:bg-indigo-600">Database</a>
+            <a href="pages/database.html" class="sidebar-link hover:bg-indigo-600">Database</a>
           </li>
         </ul>
         <!-- Monitoring -->
         <h3 class="text-xs font-semibold text-indigo-200 uppercase px-4 pt-4 pb-2">Monitoring</h3>
         <ul class="mb-4">
           <li>
-            <a href="/CDA-Project/pages/dashboard.html" class="sidebar-link hover:bg-indigo-600">Dashboard</a>
+            <a href="pages/dashboard.html" class="sidebar-link hover:bg-indigo-600">Dashboard</a>
           </li>
           <li>
-            <a href="/CDA-Project/pages/threat-map.html" class="sidebar-link hover:bg-indigo-600">Threat Map</a>
+            <a href="pages/threat-map.html" class="sidebar-link hover:bg-indigo-600">Threat Map</a>
           </li>
           <li>
-            <a href="/CDA-Project/pages/intelligence.html" class="sidebar-link hover:bg-indigo-600">Intel Reports</a>
+            <a href="pages/intelligence.html" class="sidebar-link hover:bg-indigo-600">Intel Reports</a>
           </li>
           <li>
-            <a href="/CDA-Project/pages/cda-monitor-app.html" class="sidebar-link hover:bg-indigo-600">Discord App</a>
+            <a href="pages/cda-monitor-app.html" class="sidebar-link hover:bg-indigo-600">Discord App</a>
           </li>
         </ul>
         <!-- Resources -->
         <h3 class="text-xs font-semibold text-indigo-200 uppercase px-4 pt-4 pb-2">Resources</h3>
         <ul class="mb-4">
           <li>
-            <a href="/CDA-Project/pages/info.html" class="sidebar-link hover:bg-indigo-600">Info Center</a>
+            <a href="pages/info.html" class="sidebar-link hover:bg-indigo-600">Info Center</a>
           </li>
           <li>
-            <a href="/CDA-Project/pages/resources.html" class="sidebar-link hover:bg-indigo-600">Resource Center</a>
+            <a href="pages/resources.html" class="sidebar-link hover:bg-indigo-600">Resource Center</a>
           </li>
           <li>
-            <a href="/CDA-Project/pages/faq.html" class="sidebar-link hover:bg-indigo-600">Frequent Questions</a>
+            <a href="pages/faq.html" class="sidebar-link hover:bg-indigo-600">Frequent Questions</a>
           </li>
           <li>
-            <a href="/CDA-Project/pages/news.html" class="sidebar-link hover:bg-indigo-600">Latest News</a>
+            <a href="pages/news.html" class="sidebar-link hover:bg-indigo-600">Latest News</a>
           </li>
           <li>
-            <a href="/CDA-Project/pages/changelog.html" class="sidebar-link hover:bg-indigo-600">Changelog</a>
+            <a href="pages/changelog.html" class="sidebar-link hover:bg-indigo-600">Changelog</a>
           </li>
         </ul>
         <!-- Planning -->
         <h3 class="text-xs font-semibold text-indigo-200 uppercase px-4 pt-4 pb-2">Planning</h3>
         <ul class="mb-4">
           <li>
-            <a href="/CDA-Project/pages/roadmap.html" class="sidebar-link hover:bg-indigo-600">Project Roadmap</a>
+            <a href="pages/roadmap.html" class="sidebar-link hover:bg-indigo-600">Project Roadmap</a>
           </li>
         </ul>
       </nav>
