--- a/legal/contributing.html
+++ b/legal/contributing.html
@@ -1,4 +1,4 @@
-<!-- Code of Conduct Page -->
+<!-- Project Contributions Page -->
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Page title displayed browser tab -->
-    <title>DART Project - Code of Conduct</title>
+    <title>DART Project - Project Contributions</title>
     <!-- Main stylesheets -->
     <link rel="stylesheet" href="../assets/css/main.css">
     <link rel="stylesheet" href="../assets/css/tailwind.min.css">
@@ -36,14 +36,14 @@
     <!-- Defines the color of the browser UI elements -->
     <meta name="theme-color" content="#ffffff">
     <!-- Open Graph Meta Tags (for social media sharing, mainly Facebook) -->
-    <meta property="og:title" content="DART Project - Code of Conduct">
+    <meta property="og:title" content="DART Project - Project Contributions">
     <meta property="og:description" content="TEXT">
     <meta property="og:image" content="../images/social-share/The-DART-Project.png">
-    <meta property="og:url" content="https://thatsinewave.github.io/CDA-Project/pages/code-of-conduct.html">
+    <meta property="og:url" content="https://thedartproject.github.io/pages/contributing.html">
     <meta property="og:type" content="website">
     <!-- Twitter Card Meta Tags (for better sharing on Twitter) -->
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="DART Project - Code of Conduct">
+    <meta name="twitter:title" content="DART Project - Project Contributions">
     <meta name="twitter:description" content="TEXT">
     <meta name="twitter:image" content="../images/social-share/The-DART-Project.png">
   </head>
@@ -62,52 +62,52 @@
         <h3 class="text-xs font-semibold text-indigo-200 uppercase px-4 pt-4 pb-2">Main</h3>
         <ul class="mb-4">
           <li>
-            <a href="/CDA-Project/index.html" class="sidebar-link hover:bg-indigo-600">Home</a>
+            <a href="../index.html" class="sidebar-link hover:bg-indigo-600">Home</a>
           </li>
           <li>
-            <a href="/CDA-Project/pages/database.html" class="sidebar-link hover:bg-indigo-600">Database</a>
+            <a href="../pages/database.html" class="sidebar-link hover:bg-indigo-600">Database</a>
           </li>
         </ul>
         <!-- Monitoring -->
         <h3 class="text-xs font-semibold text-indigo-200 uppercase px-4 pt-4 pb-2">Monitoring</h3>
         <ul class="mb-4">
           <li>
-            <a href="/CDA-Project/pages/dashboard.html" class="sidebar-link hover:bg-indigo-600">Dashboard</a>
+            <a href="../pages/dashboard.html" class="sidebar-link hover:bg-indigo-600">Dashboard</a>
           </li>
           <li>
-            <a href="/CDA-Project/pages/threat-map.html" class="sidebar-link hover:bg-indigo-600">Threat Map</a>
+            <a href="../pages/threat-map.html" class="sidebar-link hover:bg-indigo-600">Threat Map</a>
           </li>
           <li>
-            <a href="/CDA-Project/pages/intelligence.html" class="sidebar-link hover:bg-indigo-600">Intel Reports</a>
+            <a href="../pages/intelligence.html" class="sidebar-link hover:bg-indigo-600">Intel Reports</a>
           </li>
           <li>
-            <a href="/CDA-Project/pages/cda-monitor-app.html" class="sidebar-link hover:bg-indigo-600">Discord App</a>
+            <a href="../pages/monitor-app.html" class="sidebar-link hover:bg-indigo-600">Discord App</a>
           </li>
         </ul>
         <!-- Resources -->
         <h3 class="text-xs font-semibold text-indigo-200 uppercase px-4 pt-4 pb-2">Resources</h3>
         <ul class="mb-4">
           <li>
-            <a href="/CDA-Project/pages/info.html" class="sidebar-link hover:bg-indigo-600">Info Center</a>
+            <a href="../pages/info.html" class="sidebar-link hover:bg-indigo-600">Info Center</a>
           </li>
           <li>
-            <a href="/CDA-Project/pages/resources.html" class="sidebar-link hover:bg-indigo-600">Resource Center</a>
+            <a href="../pages/resources.html" class="sidebar-link hover:bg-indigo-600">Resource Center</a>
           </li>
           <li>
-            <a href="/CDA-Project/pages/faq.html" class="sidebar-link hover:bg-indigo-600">Frequent Questions</a>
+            <a href="../pages/faq.html" class="sidebar-link hover:bg-indigo-600">Frequent Questions</a>
           </li>
           <li>
-            <a href="/CDA-Project/pages/news.html" class="sidebar-link hover:bg-indigo-600">Latest News</a>
+            <a href="../pages/news.html" class="sidebar-link hover:bg-indigo-600">Latest News</a>
           </li>
           <li>
-            <a href="/CDA-Project/pages/changelog.html" class="sidebar-link hover:bg-indigo-600">Changelog</a>
+            <a href="../pages/changelog.html" class="sidebar-link hover:bg-indigo-600">Changelog</a>
           </li>
         </ul>
         <!-- Planning -->
         <h3 class="text-xs font-semibold text-indigo-200 uppercase px-4 pt-4 pb-2">Planning</h3>
         <ul class="mb-4">
           <li>
-            <a href="/CDA-Project/pages/roadmap.html" class="sidebar-link hover:bg-indigo-600">Project Roadmap</a>
+            <a href="../pages/roadmap.html" class="sidebar-link hover:bg-indigo-600">Project Roadmap</a>
           </li>
         </ul>
       </nav>
@@ -186,7 +186,7 @@
             <!-- Information Breadcrumb -->
             <li class="inline-flex items-center">
               <span class="text-gray-400 mx-2">></span>
-              <span class="text-sm font-medium text-gray-500">Code of Conduct</span>
+              <span class="text-sm font-medium text-gray-500">Project Contributions</span>
             </li>
           </ol>
         </nav>
@@ -195,53 +195,41 @@
     <!-- Main Content -->
     <div class="container mx-auto px-4 py-8">
       <div class="bg-white p-6 rounded-lg shadow-lg">
-        <h2 class="text-3xl font-bold text-indigo-700 mb-6">Code of Conduct</h2>
-        <p class="text-gray-600 mb-4">In the interest of fostering an open and welcoming environment, I pledge to make participation in this project and community a harassment-free experience for everyone, regardless of age, body size, disability, ethnicity, sex characteristics, gender identity and expression, level of experience, education, socio-economic status, nationality, personal appearance, race, religion, or sexual identity and orientation.</p>
+        <h2 class="text-3xl font-bold text-indigo-700 mb-6">Contributing to CDA-Project</h2>
+        <p class="text-gray-600 mb-4">First off, thanks for taking the time to contribute!</p>
+        <p class="text-gray-600 mb-4">All types of contributions are encouraged and valued. Please make sure to read the relevant section before making your contribution. It will make it a lot easier for me and smooth out the experience for all involved. The community looks forward to your contributions. 🎉</p>
         <div class="mb-8">
-          <h3 class="text-2xl font-semibold text-gray-800 mb-4">The Standards</h3>
-          <p class="text-gray-600 mb-4">Examples of behavior that contributes to a positive environment include:</p>
-          <ul class="list-disc list-inside text-gray-600 mb-4">
-            <li>Demonstrating empathy and kindness toward other people</li>
-            <li>Being respectful of differing opinions, viewpoints, and experiences</li>
-            <li>Giving and gracefully accepting constructive feedback</li>
-            <li>Accepting responsibility and apologizing to those affected by mistakes, and learning from the experience</li>
-            <li>Focusing on what is best for the overall community</li>
-          </ul>
-          <p class="text-gray-600 mb-4">Examples of unacceptable behavior include:</p>
-          <ul class="list-disc list-inside text-gray-600 mb-4">
-            <li>The use of sexualized language or imagery, and sexual attention or advances</li>
-            <li>Trolling, insulting or derogatory comments, and personal or political attacks</li>
-            <li>Public or private harassment</li>
-            <li>Publishing others' private information without explicit permission</li>
-            <li>Other conduct which could reasonably be considered inappropriate in a professional setting</li>
-          </ul>
+          <h3 class="text-2xl font-semibold text-gray-800 mb-4">Code of Conduct</h3>
+          <p class="text-gray-600 mb-4">This project and everyone participating in it is governed by the <a href="https://github.com/ThatSINEWAVE/CDA-Project/blob/master/CODE_OF_CONDUCT.md" class="text-indigo-600 hover:text-indigo-800">CDA-Project Code of Conduct</a>. By participating, you are expected to uphold this code. Please report unacceptable behavior to <b>EMAIL COMING SOON</b> or via Discord DMs at <b>sinewave_</b>. </p>
         </div>
         <div class="mb-8">
-          <h3 class="text-2xl font-semibold text-gray-800 mb-4">Enforcement</h3>
-          <p class="text-gray-600 mb-4">Instances of abusive, harassing, or otherwise unacceptable behavior may be reported to the community leaders responsible for enforcement at <b>EMAIL COMING SOON</b> or via Discord DMs at <b>sinewave_</b>. All complaints will be reviewed and investigated promptly and fairly. </p>
-          <p class="text-gray-600 mb-4">Community leaders are obligated to respect the privacy and security of the reporter of any incident.</p>
+          <h3 class="text-2xl font-semibold text-gray-800 mb-4">I Have a Question</h3>
+          <p class="text-gray-600 mb-4">Before asking a question, please search for existing <a href="https://github.com/ThatSINEWAVE/CDA-Project/issues" class="text-indigo-600 hover:text-indigo-800">Issues</a> that might help you. If you still need clarification, you can write your question in the issue. It is also advisable to search the internet for answers first. </p>
+          <p class="text-gray-600 mb-4">If you still need to ask a question, open an <a href="https://github.com/ThatSINEWAVE/CDA-Project/issues/new" class="text-indigo-600 hover:text-indigo-800">Issue</a> and provide as much context as possible about what you're running into. </p>
         </div>
         <div class="mb-8">
-          <h3 class="text-2xl font-semibold text-gray-800 mb-4">Enforcement Guidelines</h3>
-          <p class="text-gray-600 mb-4">Community leaders will follow these guidelines in determining the consequences for any action they deem in violation of this Code of Conduct:</p>
-          <ul class="list-disc list-inside text-gray-600 mb-4">
-            <li>
-              <strong>Correction:</strong> A private, written warning, providing clarity around the nature of the violation and an explanation of why the behavior was inappropriate. A public apology may be requested.
-            </li>
-            <li>
-              <strong>Warning:</strong> A warning with consequences for continued behavior. No interaction with the people involved for a specified period of time.
-            </li>
-            <li>
-              <strong>Temporary Ban:</strong> A temporary ban from any sort of interaction or public communication with the community for a specified period of time.
-            </li>
-            <li>
-              <strong>Permanent Ban:</strong> A permanent ban from any sort of public interaction within the community.
-            </li>
-          </ul>
+          <h3 class="text-2xl font-semibold text-gray-800 mb-4">I Want To Contribute</h3>
+          <p class="text-gray-600 mb-4">When contributing to this project, you must agree that you have authored 100% of the content, that you have the necessary rights to the content, and that the content you contribute may be provided under the project license.</p>
+          <h4 class="text-xl font-semibold text-gray-800 mb-4">Reporting Bugs</h4>
+          <p class="text-gray-600 mb-4">Before submitting a bug report, please ensure you are using the latest version and check if the bug has already been reported. Collect information about the bug, including stack traces, OS, platform, and version details.</p>
+          <p class="text-gray-600 mb-4">To submit a bug report, open an <a href="https://github.com/ThatSINEWAVE/CDA-Project/issues/new" class="text-indigo-600 hover:text-indigo-800">Issue</a> and provide detailed steps to reproduce the issue, along with the information you collected. </p>
+          <h4 class="text-xl font-semibold text-gray-800 mb-4">Suggesting Enhancements</h4>
+          <p class="text-gray-600 mb-4">Before suggesting an enhancement, ensure the functionality isn't already covered in the documentation and search for existing suggestions. If your idea fits the project's scope, submit an enhancement suggestion as a <a href="https://github.com/ThatSINEWAVE/CDA-Project/issues" class="text-indigo-600 hover:text-indigo-800">GitHub issue</a> with a clear title and detailed description. </p>
         </div>
         <div class="mb-8">
-          <h3 class="text-2xl font-semibold text-gray-800 mb-4">Attribution</h3>
-          <p class="text-gray-600 mb-4">This Code of Conduct is adapted from the <a href="https://contributor-covenant.org/" class="text-indigo-600 hover:text-indigo-800">Contributor Covenant</a>, version 1.4 and 2.0. </p>
+          <h3 class="text-2xl font-semibold text-gray-800 mb-4">Styleguides</h3>
+          <h4 class="text-xl font-semibold text-gray-800 mb-4">Commit Messages</h4>
+          <p class="text-gray-600 mb-4">Please follow the standard conventions for commit messages, ensuring they are clear and descriptive.</p>
+        </div>
+        <div class="mb-8">
+          <h3 class="text-2xl font-semibold text-gray-800 mb-4">Join The Project Team</h3>
+          <p class="text-gray-600 mb-4">If you're interested in joining the project team, please reach out with your contributions and ideas. I look forward to collaborating with you!</p>
+        </div>
+        <div class="mb-8">
+          <h3 class="text-2xl font-semibold text-gray-800 mb-4">How Can I Contribute?</h3>
+          <p class="text-gray-600 mb-4">Server owners and staff can play a vital role in enhancing this project by contributing their automod logs that help identify and block malicious messages <a href="https://raw.githubusercontent.com/ThatSINEWAVE/CDA-Project/refs/heads/main/docs/images/site-images/Example.png" class="text-indigo-600" target="_blank">like these</a>. These logs, which contain data on URLs and accounts involved in suspicious activities, will be parsed, validated, and added to the database to further strengthen the security measures. </p>
+          <p class="text-gray-600 mb-4">The contributions can be kept anonymous, or if the server owners prefer, they can be credited. Importantly, while the data from the logs will be included in the database, the specific source (the server in which the malicious activity was detected) will not be disclosed on the public-facing site. However, it may be stored in the database for internal purposes.</p>
+          <p class="text-gray-600 mb-4">If you're interested, feel free to contact me on Discord at <b>sinewave_</b>, and we can discuss further. </p>
         </div>
       </div>
     </div>
@@ -254,13 +242,13 @@
         <!-- Buttons -->
         <div class="flex flex-wrap justify-center gap-4">
           <!-- License Button -->
-          <a href="/CDA-Project/pages/license.html" class="bg-indigo-700 hover:bg-indigo-600 text-white px-6 py-3 rounded-lg text-lg font-semibold transition-colors shadow-md hover:shadow-lg w-full sm:w-auto"> LICENSE </a>
+          <a href="license.html" class="bg-indigo-700 hover:bg-indigo-600 text-white px-6 py-3 rounded-lg text-lg font-semibold transition-colors shadow-md hover:shadow-lg w-full sm:w-auto"> LICENSE </a>
           <!-- Code of Conduct Button -->
-          <a href="/CDA-Project/pages/code-of-conduct.html" class="bg-indigo-700 hover:bg-indigo-600 text-white px-6 py-3 rounded-lg text-lg font-semibold transition-colors shadow-md hover:shadow-lg w-full sm:w-auto"> CODE OF CONDUCT </a>
+          <a href="code-of-conduct.html" class="bg-indigo-700 hover:bg-indigo-600 text-white px-6 py-3 rounded-lg text-lg font-semibold transition-colors shadow-md hover:shadow-lg w-full sm:w-auto"> CODE OF CONDUCT </a>
           <!-- Contributing Button -->
-          <a href="/CDA-Project/pages/contributing.html" class="bg-indigo-700 hover:bg-indigo-600 text-white px-6 py-3 rounded-lg text-lg font-semibold transition-colors shadow-md hover:shadow-lg w-full sm:w-auto"> CONTRIBUTIONS </a>
+          <a href="contributing.html" class="bg-indigo-700 hover:bg-indigo-600 text-white px-6 py-3 rounded-lg text-lg font-semibold transition-colors shadow-md hover:shadow-lg w-full sm:w-auto"> CONTRIBUTIONS </a>
           <!-- Security Button -->
-          <a href="/CDA-Project/pages/security.html" class="bg-indigo-700 hover:bg-indigo-600 text-white px-6 py-3 rounded-lg text-lg font-semibold transition-colors shadow-md hover:shadow-lg w-full sm:w-auto"> SECURITY </a>
+          <a href="security.html" class="bg-indigo-700 hover:bg-indigo-600 text-white px-6 py-3 rounded-lg text-lg font-semibold transition-colors shadow-md hover:shadow-lg w-full sm:w-auto"> SECURITY </a>
         </div>
       </div>
     </div>
