--- a/pages/resources.html
+++ b/pages/resources.html
@@ -39,7 +39,7 @@
     <meta property="og:title" content="DART Project - Resource Center">
     <meta property="og:description" content="Explore a comprehensive collection of resources designed to empower users with essential tools for security and safety. Access reporting tools, expert tips, and guides to enhance your awareness and proactive defense. With up-to-date resources, users can easily stay informed, mitigate risks, and ensure a safer experience across all platforms.">
     <meta property="og:image" content="../images/social-share/The-DART-Project.png">
-    <meta property="og:url" content="https://thatsinewave.github.io/CDA-Project/pages/resources.html">
+    <meta property="og:url" content="https://thedartproject.github.io/pages/resources.html">
     <meta property="og:type" content="website">
     <!-- Twitter Card Meta Tags (for better sharing on Twitter) -->
     <meta name="twitter:card" content="summary_large_image">
@@ -62,52 +62,52 @@
         <h3 class="text-xs font-semibold text-indigo-200 uppercase px-4 pt-4 pb-2">Main</h3>
         <ul class="mb-4">
           <li>
-            <a href="/CDA-Project/index.html" class="sidebar-link hover:bg-indigo-600">Home</a>
+            <a href="../index.html" class="sidebar-link hover:bg-indigo-600">Home</a>
           </li>
           <li>
-            <a href="/CDA-Project/pages/database.html" class="sidebar-link hover:bg-indigo-600">Database</a>
+            <a href="database.html" class="sidebar-link hover:bg-indigo-600">Database</a>
           </li>
         </ul>
         <!-- Monitoring -->
         <h3 class="text-xs font-semibold text-indigo-200 uppercase px-4 pt-4 pb-2">Monitoring</h3>
         <ul class="mb-4">
           <li>
-            <a href="/CDA-Project/pages/dashboard.html" class="sidebar-link hover:bg-indigo-600">Dashboard</a>
+            <a href="dashboard.html" class="sidebar-link hover:bg-indigo-600">Dashboard</a>
           </li>
           <li>
-            <a href="/CDA-Project/pages/threat-map.html" class="sidebar-link hover:bg-indigo-600">Threat Map</a>
+            <a href="threat-map.html" class="sidebar-link hover:bg-indigo-600">Threat Map</a>
           </li>
           <li>
-            <a href="/CDA-Project/pages/intelligence.html" class="sidebar-link hover:bg-indigo-600">Intel Reports</a>
+            <a href="intelligence.html" class="sidebar-link hover:bg-indigo-600">Intel Reports</a>
           </li>
           <li>
-            <a href="/CDA-Project/pages/cda-monitor-app.html" class="sidebar-link hover:bg-indigo-600">Discord App</a>
+            <a href="cda-monitor-app.html" class="sidebar-link hover:bg-indigo-600">Discord App</a>
           </li>
         </ul>
         <!-- Resources -->
         <h3 class="text-xs font-semibold text-indigo-200 uppercase px-4 pt-4 pb-2">Resources</h3>
         <ul class="mb-4">
           <li>
-            <a href="/CDA-Project/pages/info.html" class="sidebar-link hover:bg-indigo-600">Info Center</a>
+            <a href="info.html" class="sidebar-link hover:bg-indigo-600">Info Center</a>
           </li>
           <li>
-            <a href="/CDA-Project/pages/resources.html" class="sidebar-link hover:bg-indigo-600">Resource Center</a>
+            <a href="resources.html" class="sidebar-link hover:bg-indigo-600">Resource Center</a>
           </li>
           <li>
-            <a href="/CDA-Project/pages/faq.html" class="sidebar-link hover:bg-indigo-600">Frequent Questions</a>
+            <a href="faq.html" class="sidebar-link hover:bg-indigo-600">Frequent Questions</a>
           </li>
           <li>
-            <a href="/CDA-Project/pages/news.html" class="sidebar-link hover:bg-indigo-600">Latest News</a>
+            <a href="news.html" class="sidebar-link hover:bg-indigo-600">Latest News</a>
           </li>
           <li>
-            <a href="/CDA-Project/pages/changelog.html" class="sidebar-link hover:bg-indigo-600">Changelog</a>
+            <a href="changelog.html" class="sidebar-link hover:bg-indigo-600">Changelog</a>
           </li>
         </ul>
         <!-- Planning -->
         <h3 class="text-xs font-semibold text-indigo-200 uppercase px-4 pt-4 pb-2">Planning</h3>
         <ul class="mb-4">
           <li>
-            <a href="/CDA-Project/pages/roadmap.html" class="sidebar-link hover:bg-indigo-600">Project Roadmap</a>
+            <a href="roadmap.html" class="sidebar-link hover:bg-indigo-600">Project Roadmap</a>
           </li>
         </ul>
       </nav>
@@ -124,7 +124,7 @@
         <div class="container mx-auto flex justify-between items-center">
           <!-- Header Title -->
           <div>
-            <a href="/CDA-Project/index.html" class="block">
+            <a href="../index.html" class="block">
               <h1 class="text-2xl font-bold flex items-center"> DART Project <span class="text-amber-400 text-xs ml-2 align-top">BETA</span>
               </h1>
               <p class="text-sm text-gray-200">Tracking Threats, Protecting Communities</p>
@@ -178,7 +178,7 @@
           <ol class="inline-flex items-center space-x-2">
             <!-- Home Breadcrumb -->
             <li class="inline-flex items-center">
-              <a href="/CDA-Project/index.html" class="inline-flex items-center text-sm font-medium text-gray-700 hover:text-indigo-600">
+              <a href="../index.html" class="inline-flex items-center text-sm font-medium text-gray-700 hover:text-indigo-600">
                 <svg class="w-4 h-4 mr-2" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
                   <path d="M10.707 2.293a1 1 0 00-1.414 0l-7 7a1 1 0 001.414 1.414L4 10.414V17a1 1 0 001 1h2a1 1 0 001-1v-2a1 1 0 011-1h2a1 1 0 011 1v2a1 1 0 001 1h2a1 1 0 001-1v-6.586l.293.293a1 1 0 001.414-1.414l-7-7z"></path>
                 </svg> Home </a>
@@ -334,13 +334,13 @@
         <!-- Buttons -->
         <div class="flex flex-wrap justify-center gap-4">
           <!-- License Button -->
-          <a href="/CDA-Project/pages/license.html" class="bg-indigo-700 hover:bg-indigo-600 text-white px-6 py-3 rounded-lg text-lg font-semibold transition-colors shadow-md hover:shadow-lg w-full sm:w-auto"> LICENSE </a>
+          <a href="../legal/license.html" class="bg-indigo-700 hover:bg-indigo-600 text-white px-6 py-3 rounded-lg text-lg font-semibold transition-colors shadow-md hover:shadow-lg w-full sm:w-auto"> LICENSE </a>
           <!-- Code of Conduct Button -->
-          <a href="/CDA-Project/pages/code-of-conduct.html" class="bg-indigo-700 hover:bg-indigo-600 text-white px-6 py-3 rounded-lg text-lg font-semibold transition-colors shadow-md hover:shadow-lg w-full sm:w-auto"> CODE OF CONDUCT </a>
+          <a href="../legal/code-of-conduct.html" class="bg-indigo-700 hover:bg-indigo-600 text-white px-6 py-3 rounded-lg text-lg font-semibold transition-colors shadow-md hover:shadow-lg w-full sm:w-auto"> CODE OF CONDUCT </a>
           <!-- Contributing Button -->
-          <a href="/CDA-Project/pages/contributing.html" class="bg-indigo-700 hover:bg-indigo-600 text-white px-6 py-3 rounded-lg text-lg font-semibold transition-colors shadow-md hover:shadow-lg w-full sm:w-auto"> CONTRIBUTIONS </a>
+          <a href="../legal/contributing.html" class="bg-indigo-700 hover:bg-indigo-600 text-white px-6 py-3 rounded-lg text-lg font-semibold transition-colors shadow-md hover:shadow-lg w-full sm:w-auto"> CONTRIBUTIONS </a>
           <!-- Security Button -->
-          <a href="/CDA-Project/pages/security.html" class="bg-indigo-700 hover:bg-indigo-600 text-white px-6 py-3 rounded-lg text-lg font-semibold transition-colors shadow-md hover:shadow-lg w-full sm:w-auto"> SECURITY </a>
+          <a href="../legal/security.html" class="bg-indigo-700 hover:bg-indigo-600 text-white px-6 py-3 rounded-lg text-lg font-semibold transition-colors shadow-md hover:shadow-lg w-full sm:w-auto"> SECURITY </a>
         </div>
       </div>
     </div>
