fixed buttons on home page

--- a/index.html
+++ b/index.html
@@ -207,9 +207,9 @@
         <!-- Buttons -->
         <div class="flex flex-col md:flex-row justify-center items-center gap-4">
           <!-- Dashboard Button -->
-          <a href="/CDA-Project/pages/dashboard.html" class="bg-indigo-600 hover:bg-indigo-500 text-white px-8 py-4 rounded-lg text-lg font-semibold transition-colors shadow-lg hover:shadow-xl"> DASHBOARD </a>
+          <a href="pages/dashboard.html" class="bg-indigo-600 hover:bg-indigo-500 text-white px-8 py-4 rounded-lg text-lg font-semibold transition-colors shadow-lg hover:shadow-xl"> DASHBOARD </a>
           <!-- Database Button -->
-          <a href="/CDA-Project/pages/database.html" class="bg-indigo-600 hover:bg-indigo-500 text-white px-8 py-4 rounded-lg text-lg font-semibold transition-colors shadow-lg hover:shadow-xl"> DATABASE </a>
+          <a href="pages/database.html" class="bg-indigo-600 hover:bg-indigo-500 text-white px-8 py-4 rounded-lg text-lg font-semibold transition-colors shadow-lg hover:shadow-xl"> DATABASE </a>
         </div>
       </div>
     </div>
