updated meta tags

--- a/pages/resources.html
+++ b/pages/resources.html
@@ -12,40 +12,40 @@
     <link rel="stylesheet" href="../assets/css/tailwind.min.css">
     <link rel="stylesheet" href="../assets/css/context-menu.css">
     <!-- Favicon for all browsers -->
-    <link rel="icon" href="../images/favicons/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="https://raw.githubusercontent.com/TheDARTProject/Website-Images/refs/heads/main/favicons/favicon.ico" type="image/x-icon">
     <!-- Apple Touch Icons (for iOS home screen bookmarks) -->
-    <link rel="apple-touch-icon" sizes="57x57" href="../images/apple/apple-icon-57x57.png">
-    <link rel="apple-touch-icon" sizes="60x60" href="../images/apple/apple-icon-60x60.png">
-    <link rel="apple-touch-icon" sizes="72x72" href="../images/apple/apple-icon-72x72.png">
-    <link rel="apple-touch-icon" sizes="76x76" href="../images/apple/apple-icon-76x76.png">
-    <link rel="apple-touch-icon" sizes="114x114" href="../images/apple/apple-icon-114x114.png">
-    <link rel="apple-touch-icon" sizes="120x120" href="../images/apple/apple-icon-120x120.png">
-    <link rel="apple-touch-icon" sizes="144x144" href="../images/apple/apple-icon-144x144.png">
-    <link rel="apple-touch-icon" sizes="152x152" href="../images/apple/apple-icon-152x152.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="../images/apple/apple-icon-180x180.png">
+    <link rel="apple-touch-icon" sizes="57x57" href="https://raw.githubusercontent.com/TheDARTProject/Website-Images/refs/heads/main/apple/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="https://raw.githubusercontent.com/TheDARTProject/Website-Images/refs/heads/main/apple/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="https://raw.githubusercontent.com/TheDARTProject/Website-Images/refs/heads/main/apple/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="https://raw.githubusercontent.com/TheDARTProject/Website-Images/refs/heads/main/apple/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="https://raw.githubusercontent.com/TheDARTProject/Website-Images/refs/heads/main/apple/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="https://raw.githubusercontent.com/TheDARTProject/Website-Images/refs/heads/main/apple/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="https://raw.githubusercontent.com/TheDARTProject/Website-Images/refs/heads/main/apple/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="https://raw.githubusercontent.com/TheDARTProject/Website-Images/refs/heads/main/apple/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="https://raw.githubusercontent.com/TheDARTProject/Website-Images/refs/heads/main/apple/apple-icon-180x180.png">
     <!-- Favicons for different devices -->
-    <link rel="icon" type="image/png" sizes="192x192" href="../images/android/android-icon-192x192.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="../images/favicons/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="96x96" href="../images/favicons/favicon-96x96.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="../images/favicons/favicon-16x16.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="https://raw.githubusercontent.com/TheDARTProject/Website-Images/refs/heads/main/android/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="https://raw.githubusercontent.com/TheDARTProject/Website-Images/refs/heads/main/favicons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="https://raw.githubusercontent.com/TheDARTProject/Website-Images/refs/heads/main/favicons/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="https://raw.githubusercontent.com/TheDARTProject/Website-Images/refs/heads/main/favicons/favicon-16x16.png">
     <!-- Web Manifest -->
-    <link rel="manifest" href="../site-data/site.manifest">
+    <link rel="manifest" href="site-data/site.manifest">
     <!-- Windows-specific tiles (for pinned sites in Windows Start menu) -->
-    <meta name="msapplication-TileColor" content="#ffffff">
-    <meta name="msapplication-TileImage" content="../images/microsoft/ms-icon-144x144.png">
+    <meta name="msapplication-TileColor" content="#4338ca">
+    <meta name="msapplication-TileImage" content="https://raw.githubusercontent.com/TheDARTProject/Website-Images/refs/heads/main/microsoft/ms-icon-144x144.png">
     <!-- Defines the color of the browser UI elements -->
-    <meta name="theme-color" content="#ffffff">
+    <meta name="theme-color" content="#4338ca">
     <!-- Open Graph Meta Tags (for social media sharing, mainly Facebook) -->
     <meta property="og:title" content="DART Project - Resource Center">
     <meta property="og:description" content="Explore a comprehensive collection of resources designed to empower users with essential tools for security and safety. Access reporting tools, expert tips, and guides to enhance your awareness and proactive defense. With up-to-date resources, users can easily stay informed, mitigate risks, and ensure a safer experience across all platforms.">
-    <meta property="og:image" content="../images/social-share/The-DART-Project.png">
+    <meta property="og:image" content="https://raw.githubusercontent.com/TheDARTProject/Website-Images/refs/heads/main/social-share/The-DART-Project.png">
     <meta property="og:url" content="https://thedartproject.github.io/pages/resources.html">
     <meta property="og:type" content="website">
     <!-- Twitter Card Meta Tags (for better sharing on Twitter) -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="DART Project - Resource Center">
     <meta name="twitter:description" content="Explore a comprehensive collection of resources designed to empower users with essential tools for security and safety. Access reporting tools, expert tips, and guides to enhance your awareness and proactive defense. With up-to-date resources, users can easily stay informed, mitigate risks, and ensure a safer experience across all platforms.">
-    <meta name="twitter:image" content="../images/social-share/The-DART-Project.png">
+    <meta name="twitter:image" content="https://raw.githubusercontent.com/TheDARTProject/Website-Images/refs/heads/main/social-share/The-DART-Project.png">
   </head>
   <body class="bg-gray-100 min-h-screen texture">
     <!-- Sidebar -->
