updated image paths

--- a/pages/info.html
+++ b/pages/info.html
@@ -242,7 +242,7 @@
         <!-- How to Contribute Section -->
         <div class="mb-8">
           <h3 class="text-2xl font-semibold text-gray-800 mb-4"><b>How Can I Contribute?</b></h3>
-          <p class="text-gray-600 mb-4">Server owners and staff can play a vital role in enhancing this project by contributing their automod logs to help identify and block malicious messages <a href="https://raw.githubusercontent.com/ThatSINEWAVE/CDA-Project/refs/heads/main/docs/images/site-images/Example.png" class="text-indigo-600" target="_blank">like these</a>. These logs, which contain data on URLs and accounts involved in suspicious activities, will be parsed, validated, and added to the database to further strengthen security measures. </p>
+          <p class="text-gray-600 mb-4">Server owners and staff can play a vital role in enhancing this project by contributing their automod logs to help identify and block malicious messages <a href="https://raw.githubusercontent.com/TheDARTProject/Website-Images/refs/heads/main/site-images/Example.png" class="text-indigo-600" target="_blank">like these</a>. These logs, which contain data on URLs and accounts involved in suspicious activities, will be parsed, validated, and added to the database to further strengthen security measures. </p>
           <p class="text-gray-600 mb-4">To make the process easy and efficient, I provide each server that joins the project with a custom Google Sheets page for their Mod Team. This allows them to easily log cases as they occur, and the data is automatically pulled into the database for further analysis.</p>
           <p class="text-gray-600 mb-4">Contributions can be kept anonymous, or if the server owners prefer, they can be credited.</p>
           <p class="text-gray-600 mb-4">If you're interested in contributing but aren't sure how to get started, feel free to contact me on Discord, and we can discuss the details further.</p>
@@ -264,7 +264,7 @@
               <div class="flex items-center space-x-4">
                 <div class="flex-shrink-0 w-12 h-12 rounded-full overflow-hidden">
                   <a href="https://discord.com/invite/projectcw" target="_blank" rel="noopener noreferrer">
-                    <img src="../images/server-images/PROJECT_CW.png" alt="Server Icon" class="discord-server-icon w-full h-full object-cover">
+                    <img src="https://raw.githubusercontent.com/TheDARTProject/Website-Images/refs/heads/main/server-images/PROJECT_CW.png" alt="Server Icon" class="discord-server-icon w-full h-full object-cover">
                   </a>
                 </div>
                 <div>
@@ -280,7 +280,7 @@
               <div class="flex items-center space-x-4">
                 <div class="flex-shrink-0 w-12 h-12 rounded-full overflow-hidden">
                   <a href="https://discord.com/invite/cryptocurrencyofficial" target="_blank" rel="noopener noreferrer">
-                    <img src="../images/server-images/CRYPTOCURRENCY.gif" alt="Server Icon" class="discord-server-icon w-full h-full object-cover">
+                    <img src="https://raw.githubusercontent.com/TheDARTProject/Website-Images/refs/heads/main/server-images/CRYPTOCURRENCY.gif" alt="Server Icon" class="discord-server-icon w-full h-full object-cover">
                   </a>
                 </div>
                 <div>
@@ -296,7 +296,7 @@
               <div class="flex items-center space-x-4">
                 <div class="flex-shrink-0 w-12 h-12 rounded-full overflow-hidden">
                   <a href="https://discord.com/invite/projectowl" target="_blank" rel="noopener noreferrer">
-                    <img src="../images/server-images/PROJECT_OWL.png" alt="Server Icon" class="discord-server-icon w-full h-full object-cover">
+                    <img src="https://raw.githubusercontent.com/TheDARTProject/Website-Images/refs/heads/main/server-images/PROJECT_OWL.png" alt="Server Icon" class="discord-server-icon w-full h-full object-cover">
                   </a>
                 </div>
                 <div>
@@ -312,7 +312,7 @@
               <div class="flex items-center space-x-4">
                 <div class="flex-shrink-0 w-12 h-12 rounded-full overflow-hidden">
                   <a href="https://discord.com/invite/q82WM4E" target="_blank" rel="noopener noreferrer">
-                    <img src="../images/server-images/BLITZPOST.gif" alt="Server Icon" class="discord-server-icon w-full h-full object-cover">
+                    <img src="https://raw.githubusercontent.com/TheDARTProject/Website-Images/refs/heads/main/server-images/BLITZPOST.gif" alt="Server Icon" class="discord-server-icon w-full h-full object-cover">
                   </a>
                 </div>
                 <div>
@@ -328,7 +328,7 @@
               <div class="flex items-center space-x-4">
                 <div class="flex-shrink-0 w-12 h-12 rounded-full overflow-hidden">
                   <a href="https://discord.com/invite/WKz7RJvtUK" target="_blank" rel="noopener noreferrer">
-                    <img src="../images/server-images/BLITZHUB_EU.png" alt="Server Icon" class="discord-server-icon w-full h-full object-cover">
+                    <img src="https://raw.githubusercontent.com/TheDARTProject/Website-Images/refs/heads/main/server-images/BLITZHUB_EU.png" alt="Server Icon" class="discord-server-icon w-full h-full object-cover">
                   </a>
                 </div>
                 <div>
@@ -343,7 +343,7 @@
             <div class="bg-gray-50 p-6 rounded-lg shadow-sm hover:shadow-md transition-shadow w-full md:w-5/12 lg:w-3/10 max-w-sm server-card">
               <div class="flex items-center space-x-4">
                 <div class="flex-shrink-0 w-12 h-12 rounded-full overflow-hidden">
-                  <img src="../images/server-images/Anon.png" alt="Server Icon" class="discord-server-icon w-full h-full object-cover">
+                  <img src="https://raw.githubusercontent.com/TheDARTProject/Website-Images/refs/heads/main/server-images/Anon.png" alt="Server Icon" class="discord-server-icon w-full h-full object-cover">
                 </div>
                 <div>
                   <h4 class="text-lg font-semibold text-indigo-600"><b>3 Anonymous Servers</b></h4>
@@ -358,7 +358,7 @@
               <div class="flex items-center space-x-4">
                 <div class="flex-shrink-0 w-12 h-12 rounded-full overflow-hidden">
                   <a href="https://discord.com/invite/2nHHHBWNDw" target="_blank" rel="noopener noreferrer">
-                    <img src="../images/server-images/SINEWAVE_DEVELOPMENT.png" alt="Server Icon" class="discord-server-icon w-full h-full object-cover">
+                    <img src="https://raw.githubusercontent.com/TheDARTProject/Website-Images/refs/heads/main/server-images/SINEWAVE_DEVELOPMENT.png" alt="Server Icon" class="discord-server-icon w-full h-full object-cover">
                   </a>
                 </div>
                 <div>
@@ -373,7 +373,7 @@
             <div class="bg-gray-50 p-6 rounded-lg shadow-sm hover:shadow-md transition-shadow w-full md:w-5/12 lg:w-3/10 max-w-sm server-card">
               <div class="flex items-center space-x-4">
                 <div class="flex-shrink-0 w-12 h-12 rounded-full overflow-hidden">
-                  <img src="../images/server-images/Anon-Backup.png" alt="Server Icon" class="discord-server-icon w-full h-full object-cover">
+                  <img src="https://raw.githubusercontent.com/TheDARTProject/Website-Images/refs/heads/main/server-images/Anon-Backup.png" alt="Server Icon" class="discord-server-icon w-full h-full object-cover">
                 </div>
                 <div>
                   <h4 class="text-lg font-semibold text-indigo-600"><b>Future Contributors Here</b></h4>
@@ -399,7 +399,7 @@
           <div class="bg-gray-50 p-4 rounded-lg mb-6">
             <h4 class="text-lg font-semibold text-indigo-600 mb-2"><b>First Iteration</b></h4>
             <p class="text-gray-600">By March 2024, I released the first iteration of the repository, where I experimented with various formats and methods to sort the data regarding the behavior of these accounts. A month later, in April 2024, I launched the first, very rudimentary web application to display the data.</p>
-            <p class="text-gray-600">At the time, the implementation was far from ideal—looking back, it was a poor design and didn't serve much purpose other than displaying an overwhelming list of information. Seriously, I don't know why I haven't written anything better at that time, you can <a href="https://raw.githubusercontent.com/ThatSINEWAVE/CDA-Project/refs/heads/main/docs/images/site-images/Old-UI.png" class="text-indigo-600" target="_blank">click here</a> if you want to see how bad it was. </p>
+            <p class="text-gray-600">At the time, the implementation was far from ideal—looking back, it was a poor design and didn't serve much purpose other than displaying an overwhelming list of information. Seriously, I don't know why I haven't written anything better at that time, you can <a href="https://raw.githubusercontent.com/TheDARTProject/Website-Images/refs/heads/main/site-images/Old-UI.png" class="text-indigo-600" target="_blank">click here</a> if you want to see how bad it was. </p>
           </div>
           <!-- Rework & Overhaul Section -->
           <div class="bg-gray-50 p-4 rounded-lg mb-6">
