changed wording to cover all types of malicious accounts

--- a/pages/dashboard.html
+++ b/pages/dashboard.html
@@ -257,9 +257,9 @@
         </div>
         <!-- Stats Cards -->
         <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-5 gap-6 mb-6">
-          <!-- Compromised Accounts Stat Card -->
+          <!-- Malicious Accounts Stat Card -->
           <div class="bg-white p-4 rounded-lg shadow dashboard-card">
-            <h3 class="text-gray-500 text-sm font-medium">Total Compromised Accounts</h3>
+            <h3 class="text-gray-500 text-sm font-medium">Total Malicious Accounts</h3>
             <p id="totalAccounts" class="text-3xl font-bold text-indigo-600">-</p>
             <div class="mt-2 text-xs text-gray-500" id="lastUpdated">Updated just now</div>
           </div>
@@ -316,7 +316,7 @@
                     <b>Key metrics provide insights into detected threats and attack trends.</b>
                   </li>
                   <li>
-                    <span class="font-medium">Total Compromised Accounts:</span> Number of detected hacked accounts.
+                    <span class="font-medium">Total Malicious Accounts:</span> Number of detected hacked accounts.
                   </li>
                   <li>
                     <span class="font-medium">Deleted Accounts:</span> Accounts identified as deleted or inactive.
@@ -394,7 +394,7 @@
                     <span class="font-medium">Attack Goal Distribution:</span> Objectives behind identified threats.
                   </li>
                   <li>
-                    <span class="font-medium">Compromised Account Status:</span> Current state of affected accounts.
+                    <span class="font-medium">Malicious Account Status:</span> Current state of affected accounts.
                   </li>
                   <li>
                     <span class="font-medium">Method vs Goal Matrix:</span> Relationship between attack methods and objectives.
