--- a/pages/database.html
+++ b/pages/database.html
@@ -37,14 +37,14 @@
     <meta name="theme-color" content="#4338ca">
     <!-- Open Graph Meta Tags (for social media sharing, mainly Facebook) -->
     <meta property="og:title" content="DART Project - Database">
-    <meta property="og:description" content="Comprehensive database view of all compromised account cases with advanced filtering capabilities.">
+    <meta property="og:description" content="Comprehensive database view of all malicious account cases with advanced filtering capabilities.">
     <meta property="og:image" content="https://raw.githubusercontent.com/TheDARTProject/Website-Images/refs/heads/main/social-share/The-DART-Project.png">
     <meta property="og:url" content="https://thedartproject.github.io/pages/database.html">
     <meta property="og:type" content="website">
     <!-- Twitter Card Meta Tags (for better sharing on Twitter) -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="DART Project - Database">
-    <meta name="twitter:description" content="Comprehensive database view of all compromised account cases with advanced filtering capabilities.">
+    <meta name="twitter:description" content="Comprehensive database view of all malicious account cases with advanced filtering capabilities.">
     <meta name="twitter:image" content="https://raw.githubusercontent.com/TheDARTProject/Website-Images/refs/heads/main/social-share/The-DART-Project.png">
   </head>
   <body class="bg-gray-100 min-h-screen texture">
@@ -186,7 +186,7 @@
             <!-- Dashboard Breadcrumb -->
             <li class="inline-flex items-center">
               <span class="text-gray-400 mx-2">></span>
-              <span class="text-sm font-medium text-gray-500">Dashboard</span>
+              <span class="text-sm font-medium text-gray-500">Database</span>
             </li>
           </ol>
         </nav>
@@ -202,9 +202,9 @@
       <div id="databaseContent" class="hidden">
         <!-- Info Box -->
         <div class="bg-white p-6 rounded-lg shadow-lg mb-6">
-          <h2 class="text-3xl font-bold text-indigo-700 mb-6 text-center">Comprehensive Case Database</h2>
-          <p class="text-gray-600 mb-4 text-center">This database provides a complete view of all compromised account cases with advanced filtering capabilities.</p>
-          <p class="text-gray-600 mb-4 text-center"> The DART Project Database serves as the central repository for tracking compromised Discord accounts, documenting attack methods, threat origins, and mitigation status. Each case includes detailed forensic information including attack vectors, malicious URLs, account metadata, and threat actor patterns. Use the interactive filters to analyze trends, identify emerging threats, or track specific cases. All data is updated in real-time from our monitoring network. </p>
+          <h2 class="text-3xl font-bold text-indigo-700 mb-6 text-center">DART Project Database</h2>
+          <p class="text-gray-600 mb-4 text-center">This database provides a complete view of all malicious account cases with advanced filtering capabilities.</p>
+          <p class="text-gray-600 mb-4 text-center"> The DART Project Database serves as the central repository for tracking malicious Discord accounts, documenting attack methods, threat origins, and mitigation status. Each case includes detailed forensic information including attack vectors, malicious URLs, account metadata, and threat actor patterns. Use the interactive filters to analyze trends, identify emerging threats, or track specific cases. All data is updated in real-time from our monitoring network. </p>
           <div class="counter-container mt-4">
             <div class="counter-item bg-indigo-100 text-indigo-800 hover:bg-indigo-200">
               <span class="counter-value" id="totalCasesCount">0</span>
