fixed paths to manifest

--- a/pages/threat-map.html
+++ b/pages/threat-map.html
@@ -33,7 +33,7 @@
     <link rel="icon" type="image/png" sizes="96x96" href="https://raw.githubusercontent.com/TheDARTProject/Website-Images/refs/heads/main/favicons/favicon-96x96.png">
     <link rel="icon" type="image/png" sizes="16x16" href="https://raw.githubusercontent.com/TheDARTProject/Website-Images/refs/heads/main/favicons/favicon-16x16.png">
     <!-- Web Manifest -->
-    <link rel="manifest" href="site-data/site.manifest">
+    <link rel="manifest" href="../site-data/site.manifest">
     <!-- Windows-specific tiles (for pinned sites in Windows Start menu) -->
     <meta name="msapplication-TileColor" content="#4338ca">
     <meta name="msapplication-TileImage" content="https://raw.githubusercontent.com/TheDARTProject/Website-Images/refs/heads/main/microsoft/ms-icon-144x144.png">
