--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             <a href="pages/intelligence.html" class="sidebar-link hover:bg-indigo-600">Intel Reports</a>
           </li>
           <li>
-            <a href="pages/cda-monitor-app.html" class="sidebar-link hover:bg-indigo-600">Discord App</a>
+            <a href="pages/monitor-app.html" class="sidebar-link hover:bg-indigo-600">Discord App</a>
           </li>
         </ul>
         <!-- Resources -->
@@ -127,7 +127,7 @@
         <div class="container mx-auto flex justify-between items-center">
           <!-- Header Title -->
           <div>
-            <a href="/CDA-Project/index.html" class="block">
+            <a href="index.html" class="block">
               <h1 class="text-2xl font-bold flex items-center"> DART Project <span class="text-amber-400 text-xs ml-2 align-top">BETA</span>
               </h1>
               <p class="text-sm text-gray-200">Tracking Threats, Protecting Communities</p>
@@ -181,7 +181,7 @@
           <ol class="inline-flex items-center space-x-2">
             <!-- Home Breadcrumb -->
             <li class="inline-flex items-center">
-              <a href="/CDA-Project/index.html" class="inline-flex items-center text-sm font-medium text-gray-700 hover:text-indigo-600">
+              <a href="index.html" class="inline-flex items-center text-sm font-medium text-gray-700 hover:text-indigo-600">
                 <svg class="w-4 h-4 mr-2" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
                   <path d="M10.707 2.293a1 1 0 00-1.414 0l-7 7a1 1 0 001.414 1.414L4 10.414V17a1 1 0 001 1h2a1 1 0 001-1v-2a1 1 0 011-1h2a1 1 0 011 1v2a1 1 0 001 1h2a1 1 0 001-1v-6.586l.293.293a1 1 0 001.414-1.414l-7-7z"></path>
                 </svg> Home </a>
