--- a/pages/monitor-app.html
+++ b/pages/monitor-app.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Page title displayed browser tab -->
-    <title>DART Project - CDA Monitor App</title>
+    <title>DART Project - Monitor App</title>
     <!-- Main stylesheets -->
     <link rel="stylesheet" href="../assets/css/main.css">
     <link rel="stylesheet" href="../assets/css/tailwind.min.css">
@@ -36,15 +36,15 @@
     <!-- Defines the color of the browser UI elements -->
     <meta name="theme-color" content="#4338ca">
     <!-- Open Graph Meta Tags (for social media sharing, mainly Facebook) -->
-    <meta property="og:title" content="DART Project - CDA Monitor App">
-    <meta property="og:description" content="Learn how to use the CDA Monitor App to secure your Discord server with advanced monitoring and historical scans.">
+    <meta property="og:title" content="DART Project - Monitor App">
+    <meta property="og:description" content="Learn how to use the Monitor App to secure your Discord server with advanced monitoring and historical scans.">
     <meta property="og:image" content="https://raw.githubusercontent.com/TheDARTProject/Website-Images/refs/heads/main/social-share/The-DART-Project.png">
     <meta property="og:url" content="https://thedartproject.github.io/pages/monitor-app.html">
     <meta property="og:type" content="website">
     <!-- Twitter Card Meta Tags (for better sharing on Twitter) -->
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="DART Project - CDA Monitor App">
-    <meta name="twitter:description" content="Learn how to use the CDA Monitor App to secure your Discord server with advanced monitoring and historical scans.">
+    <meta name="twitter:title" content="DART Project - Monitor App">
+    <meta name="twitter:description" content="Learn how to use the Monitor App to secure your Discord server with advanced monitoring and historical scans.">
     <meta name="twitter:image" content="https://raw.githubusercontent.com/TheDARTProject/Website-Images/refs/heads/main/social-share/The-DART-Project.png">
   </head>
   <body class="bg-gray-100 min-h-screen texture">
@@ -81,7 +81,7 @@
             <a href="intelligence.html" class="sidebar-link hover:bg-indigo-600">Intel Reports</a>
           </li>
           <li>
-            <a href="cda-monitor-app.html" class="sidebar-link hover:bg-indigo-600">Discord App</a>
+            <a href="monitor-app.html" class="sidebar-link hover:bg-indigo-600">Discord App</a>
           </li>
         </ul>
         <!-- Resources -->
@@ -186,7 +186,7 @@
             <!-- Information Breadcrumb -->
             <li class="inline-flex items-center">
               <span class="text-gray-400 mx-2">></span>
-              <span class="text-sm font-medium text-gray-500">CDA Monitor</span>
+              <span class="text-sm font-medium text-gray-500">Monitor App</span>
             </li>
           </ol>
         </nav>
@@ -197,17 +197,17 @@
       <div class="bg-white p-6 rounded-lg shadow-lg">
         <!-- Introduction Section -->
         <div class="mb-8">
-          <h2 class="text-3xl font-bold text-indigo-700 mb-6">CDA Monitor App</h2>
+          <h2 class="text-3xl font-bold text-indigo-700 mb-6">Monitor App</h2>
           <p class="text-gray-600 mb-4">Complete documentation on to use the public version of the app and also how to self-host it</p>
-          <p class="text-gray-600 mb-4">The <b>CDA Monitor App</b> is a powerful Discord moderation tool designed to help server administrators monitor and track messages containing specific keywords. It provides comprehensive logging, reporting, and alerting capabilities to help maintain server safety and compliance. </p>
+          <p class="text-gray-600 mb-4">The <b>Monitor App</b> is a powerful Discord moderation tool designed to help server administrators monitor and track messages containing specific keywords. It provides comprehensive logging, reporting, and alerting capabilities to help maintain server safety and compliance. </p>
         </div>
         <!-- Installation -->
         <div class="mb-6">
           <h4 class="text-xl font-semibold text-indigo-600 mb-2">Installation</h4>
           <div class="grid grid-cols-1 md:grid-cols-1 gap-6">
             <div class="bg-gray-50 p-4 rounded-lg">
-              <h5 class="text-lg font-semibold text-indigo-600 mb-2">How to install the CDA Monitor App</h5>
-              <p class="text-gray-600 mb-4">You can install the public version of the CDA Monitor App by visiting <a href="https://discord.com/api/oauth2/authorize?client_id=1351854272463241246&permissions=85120&scope=bot%20applications.commands" class="text-indigo-400 hover:text-indigo-100" target="_blank">this URL</a>. After you have finished installing the app inside your server, you can come back here and read about the various features of the CDA Monitor App! </p>
+              <h5 class="text-lg font-semibold text-indigo-600 mb-2">How to install the Monitor App</h5>
+              <p class="text-gray-600 mb-4">You can install the public version of the Monitor App by visiting <a href="https://discord.com/api/oauth2/authorize?client_id=1351854272463241246&permissions=85120&scope=bot%20applications.commands" class="text-indigo-400 hover:text-indigo-100" target="_blank">this URL</a>. After you have finished installing the app inside your server, you can come back here and read about the various features of the Monitor App! </p>
             </div>
           </div>
         </div>
@@ -216,7 +216,7 @@
           <h4 class="text-xl font-semibold text-indigo-600 mb-2">Notes</h4>
           <div class="grid grid-cols-1 md:grid-cols-1 gap-6">
             <div class="bg-gray-50 p-4 rounded-lg">
-              <h5 class="text-lg font-semibold text-indigo-600 mb-2">Additional notes about the CDA Monitor App.</h5>
+              <h5 class="text-lg font-semibold text-indigo-600 mb-2">Additional notes about the Monitor App.</h5>
               <ul class="list-disc pl-5 mt-2">
                 <li>The official wordlist.json file will remain private to keep the app's detection ability safe.</li>
                 <li>Server Administrators can choose to let another staff member control the public app, for this please contact the developer on Discord via DM at <code>sinewave_</code>
@@ -288,7 +288,7 @@
         <!-- Features for Self-Hosters -->
         <div class="mb-8">
           <h3 class="text-2xl font-semibold text-gray-800 mb-4">Features for Self-Hosters</h3>
-          <p class="text-gray-600 mb-4">You can download the source code of the CDA Monitor App by visiting <a href="https://github.com/ThatSINEWAVE/CDA-Project/tree/main/tools/monitor_app" class="text-indigo-400 hover:text-indigo-100" target="_blank">this section of the GitHub Repository</a>. </p>
+          <p class="text-gray-600 mb-4">You can download the source code of the Monitor App by visiting <a href="https://github.com/TheDARTProject/Discord-Apps" class="text-indigo-400 hover:text-indigo-100" target="_blank">this section of the GitHub Repository</a>. </p>
           <!-- Configuration Files -->
           <div class="mb-6">
             <h4 class="text-xl font-semibold text-indigo-600 mb-2">Configuration Files</h4>
