--- a/pages/info.html
+++ b/pages/info.html
@@ -81,7 +81,7 @@
             <a href="intelligence.html" class="sidebar-link hover:bg-indigo-600">Intel Reports</a>
           </li>
           <li>
-            <a href="cda-monitor-app.html" class="sidebar-link hover:bg-indigo-600">Discord App</a>
+            <a href="monitor-app.html" class="sidebar-link hover:bg-indigo-600">Discord App</a>
           </li>
         </ul>
         <!-- Resources -->
@@ -254,7 +254,7 @@
           <p class="text-gray-600 mb-6">I am grateful to the following Discord servers that have contributed their automod logs to help improve this project. Their contributions have been invaluable in tracking and analyzing malicious activities across Discord.</p>
           <h3 class="text-2xl font-semibold text-gray-800 mb-4"><b>Server Contributor Statuses</b></h3>
           <ul class="text-gray-600 mb-6">
-            <li><b>Active Contributor</b> - Servers that are actively contributing to the project by donating their logs via the CDA Monitor App or Google Sheets.</li>
+            <li><b>Active Contributor</b> - Servers that are actively contributing to the project by donating their logs via the Monitor App or Google Sheets.</li>
             <li><b>Passive Contributor</b> - Servers that are not actively donating their logs but have publicly accessible logs of cases.</li>
             <li><b>Past Contributor</b> - Servers that have previously contributed to the project, either actively or passively, but are no longer part of the project due to various reasons.</li>
           </ul>
@@ -405,7 +405,7 @@
           <div class="bg-gray-50 p-4 rounded-lg mb-6">
             <h4 class="text-lg font-semibold text-indigo-600 mb-2"><b>Rework & Overhaul</b></h4>
             <p class="text-gray-600">The project stagnated for nearly a year, but in February 2025, I decided it was time for a complete overhaul. I wanted to create a proper analysis dashboard that would visualize and process data about the malicious activity of compromised Discord accounts across various servers.</p>
-            <p class="text-gray-600">On March 10, 2025, I released the CDA Dashboard—what you see here today. Its goal is to provide a comprehensive, insightful tool for visualizing and analyzing the malicious activity related to these compromised accounts as they engage in their campaigns.</p>
+            <p class="text-gray-600">On March 10, 2025, I released the DART Dashboard, what you see here today. Its goal is to provide a comprehensive, insightful tool for visualizing and analyzing the malicious activity related to these compromised accounts as they engage in their campaigns.</p>
           </div>
           <!-- Future of the Project Section -->
           <div class="bg-gray-50 p-4 rounded-lg mb-6">
@@ -444,7 +444,7 @@
           <h3 class="text-2xl font-semibold text-gray-800 mb-4"><b>Additional Resources</b></h3>
           <p class="text-gray-600 mb-4">If you're interested in diving deeper into the project or want to explore more of what I do, be sure to check out my GitHub repository. It's regularly updated with new information, tools, and resources related to my work. From bug fixes to new features, you'll find everything you need right there.</p>
           <div class="flex justify-center space-x-8 mt-4">
-            <a href="https://github.com/ThatSINEWAVE/CDA-Project" class="inline-flex items-center text-indigo-600 hover:text-indigo-800">
+            <a href="https://github.com/TheDARTProject" class="inline-flex items-center text-indigo-600 hover:text-indigo-800">
               <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 mr-2" fill="currentColor" viewBox="0 0 24 24">
                 <path d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z" />
               </svg><b>Project Repository</b></a>
