--- a/pages/roadmap.html
+++ b/pages/roadmap.html
@@ -82,7 +82,7 @@
             <a href="intelligence.html" class="sidebar-link hover:bg-indigo-600">Intel Reports</a>
           </li>
           <li>
-            <a href="cda-monitor-app.html" class="sidebar-link hover:bg-indigo-600">Discord App</a>
+            <a href="monitor-app.html" class="sidebar-link hover:bg-indigo-600">Discord App</a>
           </li>
         </ul>
         <!-- Resources -->
